feat(ui): introduce dashboard layout; enhance ui of hero block of sales analytics page
